--- a/index.html
+++ b/index.html
@@ -1,35 +1,103 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>DropTechify - Smart Digital Solutions for Modern Brands</title>
-  <meta name="description" content="DropTechify is a leading software development company specializing in website development, WordPress development, video editing, guest posting, and app development. Smart digital solutions for modern brands." />
-  <meta name="keywords" content="software development, website development, WordPress development, video editing, guest posting, app development, digital solutions" />
+  <title>DropTechify - Leading Software Development Company | Web & App Development</title>
+  <meta name="description" content="DropTechify is a leading software development company in Pakistan specializing in website development, WordPress development, mobile app development, video editing, and custom software solutions. Transform your business with our expert digital solutions." />
+  <meta name="keywords" content="software development company Pakistan, website development, WordPress development, mobile app development, video editing services, custom software solutions, SaaS development, e-commerce solutions, UI/UX design, digital transformation" />
   <meta name="author" content="DropTechify" />
-  
+  <meta name="robots" content="index, follow" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="rating" content="general" />
+
+  <!-- Performance optimizations -->
+  <meta http-equiv="Cache-Control" content="public, max-age=31536000">
+  <meta http-equiv="Expires" content="31536000">
+
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://droptechify.com/" />
   <meta property="og:title" content="DropTechify - Smart Digital Solutions for Modern Brands" />
   <meta property="og:description" content="Leading software development company specializing in website development, WordPress, video editing, and app development." />
-  <meta property="og:image" content="/og-image.jpg" />
+  <meta property="og:image" content="/attached_assets/Droptechify-black.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
   <meta property="twitter:url" content="https://droptechify.com/" />
   <meta property="twitter:title" content="DropTechify - Smart Digital Solutions for Modern Brands" />
   <meta property="twitter:description" content="Leading software development company specializing in website development, WordPress, video editing, and app development." />
-  <meta property="twitter:image" content="/og-image.jpg" />
+  <meta property="twitter:image" content="/attached_assets/Droptechify-black.png" />
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  
-  <!-- Preconnect to external domains -->
+  <link rel="icon" type="image/x-icon" href="/attached_assets/favicon.png" sizes="32x32">
+    <link rel="icon" type="image/png" href="/attached_assets/favicon.png" sizes="16x16">
+    <link rel="icon" type="image/png" href="/attached_assets/favicon.png" sizes="32x32">
+    <link rel="apple-touch-icon" href="/attached_assets/favicon.png" sizes="180x180">
+
+  <!-- Preconnect to external domains for faster loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+
+  <!-- DNS prefetch for performance -->
+  <link rel="dns-prefetch" href="//fonts.googleapis.com">
+  <link rel="dns-prefetch" href="//fonts.gstatic.com">
+
+  <!-- Resource hints for performance -->
+  <link rel="preload" as="font" href="https://fonts.gstatic.com/s/inter/v12/UcCO3FwrK3iLTeHuS_fvQtMwCp50KnMw2boKoduKmMEVuLyfAZ9hiJ-Ek-_EeA.woff2" type="font/woff2" crossorigin>
+
+  <!-- Structured Data for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "DropTechify",
+    "description": "Leading software development company specializing in web development, app development, and digital solutions",
+    "url": "https://droptechify.com",
+    "logo": "https://droptechify.com/attached_assets/Droptechify-black.png",
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "droptechify@gmail.com",
+      "contactType": "customer service"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressCountry": "PK"
+    },
+    "sameAs": [
+      "https://linkedin.com/company/droptechify",
+      "https://github.com/droptechify"
+    ],
+    "services": [
+      "Website Development",
+      "WordPress Development", 
+      "Mobile App Development",
+      "Custom Software Development",
+      "Video Editing Services",
+      "SaaS Development"
+    ]
+  }
+  </script>
+
+  <!-- Additional structured data for services -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ProfessionalService",
+    "name": "DropTechify Software Development Services",
+    "image": "https://droptechify.com/attached_assets/Droptechify-black.png",
+    "description": "Professional software development services including website development, WordPress development, mobile app development, and custom software solutions.",
+    "provider": {
+      "@type": "Organization",
+      "name": "DropTechify"
+    },
+    "serviceType": "Software Development",
+    "areaServed": "Worldwide",
+    "availableLanguage": "English"
+  }
+  </script>
 </head>
 <body>
   <div id="root"></div>
