--- a/index.html
+++ b/index.html
@@ -30,11 +30,12 @@
   <meta property="twitter:description" content="Leading software development company specializing in website development, WordPress, video editing, and app development." />
   <meta property="twitter:image" content="/attached_assets/Droptechify-black.png" />
 
-  <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="/attached_assets/favicon.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/attached_assets/favicon.png" sizes="16x16">
-    <link rel="icon" type="image/png" href="/attached_assets/favicon.png" sizes="32x32">
-    <link rel="apple-touch-icon" href="/attached_assets/favicon.png" sizes="180x180">
+<!-- Favicons -->
+<link rel="icon" type="image/png" sizes="16x16" href="/attached_assets/favicon-16x16.png">
+<link rel="icon" type="image/png" sizes="32x32" href="/attached_assets/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="48x48" href="/attached_assets/favicon-48x48.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/attached_assets/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="512x512" href="/attached_assets/favicon-512x512.png">
 
   <!-- Preconnect to external domains for faster loading -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
